# eol-cloth

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
